src/objects/ZipCodeToRegion__c.object
<CustomObject>
    <description>Map ZipCodes to Region</description>
    <fields>
        <fullName>Color__c</fullName>
        <label>Color</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Designation__c</fullName>
        <label>Designation</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RegionNameShort__c</fullName>
        <label>Short Region Name</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RegionName__c</fullName>
        <label>Region Name</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <label>ZipCodeToRegion</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>RegionName__c</columns>
        <columns>RegionNameShort__c</columns>
        <columns>Color__c</columns>
        <columns>Designation__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>ZipCode</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>ZipCodeToRegions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>